changes in design, payment list added,

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,24 @@
 SECRET_KEY=THISISMYSECRETKEYFORSELLYOURCARPROJECT
+
+
+
+
+
+
+paytm credentials
+
+Test Merchant ID=MXEsxe38035257377216
+Test Merchant Key=SZjAZbRUziOVYAvn
+Website=WEBSTAGING
+Industry Type=Retail
+Channel ID (For Website)=WEB
+Channel ID (For Mobile Apps)=WAP
+
+
+
+
+
+razorpay test mode credentials
+
+key_id = rzp_test_ZlmqeEsQ5H3qpM
+key_secret = 59KFcWeJMs49SNGl8JvV7q5c
