--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "razorpay": "^2.8.1",
+    "uuidv4": "^6.2.13"
   }
 }
