--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "selenium-webdriver": "^4.2.0",
     "semantic-ui-react": "^2.0.4",
     "snackbar": "^1.1.0",
     "styled-components": "^5.3.3",
